Update project data and fix project metadata alignment

--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -88,7 +88,8 @@
 .project-metadata h4 + p::before {
     content: " ";
 }
-.project-metadata a {
+.project-metadata a,
+.project-metadata p {
     vertical-align: middle;
 }
 .topic-item:not(:last-of-type)::after {
